syntax = "proto3";

/*
 * work in progress
 */

message BulkOrPlanetoid {
	message HeadNode {
		string path = 1;
		int64 epoch = 2;
	}

	repeated Meta data = 1;
	HeadNode head_node = 2;
	repeated double for_oriented_bounding_box_1 = 3;
	repeated float meters_per_texel_1 = 4;
	int64 default_imagery_epoch = 5;
	int64 default_texture_format = 6; // 41 = 6, 1 = 1

	message Meta {

		int32 path_id = 1;
		int32 epoch = 2; // defaults to self if no value
		bytes for_oriented_bounding_box_2 = 3;
		float meters_per_texel_2 = 4;
		int32 bulk_metadata_epoch = 5; // defaults to self if no value
		int32 texture_format = 8; // optional 41 = 6, 1 = 1
	}

	enum TextureMaybe {
		UNKNOWN = 0;
		JPG = 1;
		DXT = 41;
	}	
	
}